track package.json

--- a/14-FinalStarwarsApp/package.json
+++ b/14-FinalStarwarsApp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starwars-express",
   "version": "1.0.0",
-  "description": "",
+  "description": "* Spend a few moments looking over the code sent to you. First, get the server running, then begin to dissect the JavaScript code found at the bottom of `add.html`.",
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.18.3",
